apps/sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: sonarqube
spec:
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432
